Added log out button to log the user out when it is logged in. Added new operation to check whether there is an ongoing session.
